--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     android:background="@color/medium_snow">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="@dimen/seventy_five_dp" />
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -15,60 +22,50 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:orientation="vertical">
+        android:layout_margin="@dimen/ten_dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="@dimen/fifty_dp"
+            android:layout_height="@dimen/fifty_dp"
+            app:srcCompat="@drawable/ic_new" />
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/ten_dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_marginStart="@dimen/ten_dp"
+            android:layout_marginTop="@dimen/one_dp"
+            android:layout_marginBottom="@dimen/one_dp"
+            android:background="@drawable/bg_round_white"
+            android:elevation="@dimen/five_dp">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="@dimen/fifty_dp"
-                android:layout_height="@dimen/fifty_dp"
-                app:srcCompat="@drawable/ic_new" />
-
-            <RelativeLayout
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/messageField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/ten_dp"
-                android:layout_marginTop="@dimen/one_dp"
-                android:layout_marginBottom="@dimen/one_dp"
-                android:background="@drawable/bg_round_white"
-                android:elevation="@dimen/five_dp">
+                android:layout_marginEnd="@dimen/fifty_dp"
+                android:background="@android:color/transparent"
+                android:hint="Type here..."
+                android:minHeight="@dimen/sixty_dp"
+                android:padding="@dimen/fifteen_dp"
+                android:textSize="@dimen/twelve_sp" />
 
-                <androidx.appcompat.widget.AppCompatEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/fifty_dp"
-                    android:background="@android:color/transparent"
-                    android:hint="Type here..."
-                    android:minHeight="@dimen/sixty_dp"
-                    android:id="@+id/messageField"
-                    android:padding="@dimen/fifteen_dp"
-                    android:textSize="@dimen/twelve_sp" />
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="@dimen/forty_five_dp"
-                    android:layout_height="@dimen/forty_five_dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:layout_margin="@dimen/five_dp"
-                    android:background="@drawable/bg_circle_purple"
-                    android:padding="@dimen/ten_dp"
-                    android:id="@+id/send"
-                    app:srcCompat="@drawable/ic_send_message" />
-            </RelativeLayout>
-        </LinearLayout>
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/send"
+                android:layout_width="@dimen/forty_five_dp"
+                android:layout_height="@dimen/forty_five_dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_margin="@dimen/five_dp"
+                android:background="@drawable/bg_circle_purple"
+                android:padding="@dimen/ten_dp"
+                app:srcCompat="@drawable/ic_send_message" />
+        </RelativeLayout>
     </LinearLayout>
 
     <include
+        android:id="@+id/disclaimer"
         layout="@layout/layout_disclaimer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
