--- a/app/src/main/res/layout/layout_receiver.xml
+++ b/app/src/main/res/layout/layout_receiver.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_round_purple"
-        android:padding="@dimen/twenty_dp"
+        android:padding="@dimen/ten_dp"
         android:id="@+id/textview"
         android:textColor="@color/white"
         android:layout_alignParentEnd="true"
