--- a/app/src/main/res/layout/layout_sender.xml
+++ b/app/src/main/res/layout/layout_sender.xml
@@ -9,9 +9,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_round_white"
-        android:padding="@dimen/twenty_dp"
+        android:padding="@dimen/ten_dp"
         android:id="@+id/textview"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="@dimen/eighteen_sp"
         android:layout_marginEnd="@dimen/eighty_dp">
 
