--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -41,4 +41,5 @@
     <dimen name="twenty_five_dp">25dp</dimen>
     <dimen name="eight_dp">8dp</dimen>
     <dimen name="sixty_five_dp">65dp</dimen>
+    <dimen name="seventy_five_dp">75dp</dimen>
 </resources>
