--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -1,77 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_margin="16dp"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="1"
-    android:layout_centerHorizontal="true">
+    android:background="@drawable/grad_call">
 
-    <TextView
-        android:id="@+id/room_edittext_description"
+    <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/room_description"/>
+        android:layout_height="?actionBarSize"
+        android:gravity="center_vertical"
+        android:padding="@dimen/ten_dp"
+        android:text="Chatty"
+        android:textSize="@dimen/twenty_one_sp"
+        android:textStyle="bold" />
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginBottom="8dp">
+        android:layout_height="match_parent"
+        android:layout_marginTop="?actionBarSize">
 
-        <EditText
-            android:id="@+id/room_edittext"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:singleLine="true"
-            android:imeOptions="actionDone"
-            android:inputType="text"/>
+            android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/connect_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:contentDescription="@string/connect_description"
-            android:background="@android:drawable/sym_action_call" />
-
-        <ImageButton
-            android:id="@+id/add_favorite_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:contentDescription="@string/add_favorite_description"
-            android:background="@android:drawable/ic_input_add" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/room_listview_description"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:lines="1"
-        android:maxLines="1"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/favorites"
-        android:gravity="center_vertical"/>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <ListView
-            android:id="@+id/room_listview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:drawSelectorOnTop="false" />
-
-        <TextView
-            android:id="@android:id/empty"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@string/no_favorites" />
-    </FrameLayout>
-</LinearLayout>
+            <include layout="@layout/layout_ad" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/thirty_dp"
+                android:text="Please be polite and respect the person. Start with a good gesture"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/eighteen_sp"/>
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Connecting..."
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="@dimen/eighteen_sp"/>
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
