--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -3,9 +3,10 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/grad_call">
 
-    <com.chatty.app.PercentFrameLayout
+    <!--<com.chatty.app.PercentFrameLayout
         android:id="@+id/remote_video_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -23,7 +24,7 @@
             android:id="@+id/local_video_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-    </com.chatty.app.PercentFrameLayout>
+    </com.chatty.app.PercentFrameLayout>-->
 
     <FrameLayout
         android:id="@+id/call_fragment_container"
