--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,5 +28,10 @@
                 android:id="@+id/recyclerView"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/adLayout"/>
 </RelativeLayout>
