--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/recyclerView"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/sixty_dp"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
     <RelativeLayout
