--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -1,22 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/grad_call">
-    <include
-        layout="@layout/layout_ad"/>
-    <androidx.appcompat.widget.AppCompatTextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/thirty_dp"
-        android:text="Please be polite and respect the person. Start with a good gesture"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:layout_centerVertical="true"
-        android:textSize="@dimen/eighteen_sp"
-        android:textStyle="bold"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <include
+            layout="@layout/layout_ad"/>
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/thirty_dp"
+            android:text="Please be polite and respect the person. Start with a good gesture"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/eighteen_sp"
+            android:textStyle="bold"/>
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/av_loader"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:adjustViewBounds="true"
+            android:cropToPadding="true"
+            android:scaleType="centerCrop"
+            android:layout_gravity="center"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="ringing.json"
+            app:lottie_loop="true"/>
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/five_dp"
+            android:text="Ringing..."
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/eighteen_sp"/>
+    </LinearLayout>
+
     <FrameLayout
         android:id="@+id/call_fragment_container"
         android:layout_width="match_parent"
