--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -4,54 +4,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/buttons_call_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/eighty_dp"
         android:layout_alignWithParentIfMissing="true"
         android:layout_above="@+id/capture_format_text_call"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="@dimen/ten_dp"
         android:layout_marginEnd="@dimen/ten_dp"
         android:layout_marginBottom="32dp"
-        android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/button_call_switch_camera"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/ic_flip"
-            android:contentDescription="@string/switch_camera"
-            android:visibility="gone" />
+        android:gravity="center"
+        android:padding="@dimen/ten_dp"
+        android:orientation="horizontal"
+        android:background="@drawable/bg_round_white">
 
         <ImageButton
             android:id="@+id/button_call_toggle_mic"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="@dimen/forty_dp"
             android:background="@drawable/ic_mic"
             android:contentDescription="@string/toggle_mic" />
-
-
-        <ImageButton
-            android:id="@+id/button_call_scaling_mode"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/ic_action_return_from_full_screen"
-            android:contentDescription="@string/disconnect_call"
-            android:visibility="gone" />
 
         <ImageButton
             android:id="@+id/button_call_disconnect"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/forty_dp"
             android:background="@drawable/ic_call"
             android:contentDescription="@string/disconnect_call" />
 
-    </RelativeLayout>
+        <ImageButton
+            android:id="@+id/button_call_toggle_speaker"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@drawable/ic_mute"
+            android:contentDescription="@string/muted" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/capture_format_text_call"
