splash screen added

--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -9,7 +9,7 @@
         android:layout_height="?actionBarSize"
         android:gravity="center_vertical"
         android:padding="@dimen/ten_dp"
-        android:text="Chatty"
+        android:text="@string/app_name"
         android:textSize="@dimen/twenty_one_sp"
         android:textStyle="bold" />
 
