--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -9,8 +9,8 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="@dimen/seventy_five_dp" />
+        android:layout_marginBottom="@dimen/seventy_five_dp"
+        android:layout_marginTop="?actionBarSize"/>
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
