--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -30,7 +30,8 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="@dimen/fifty_dp"
             android:layout_height="@dimen/fifty_dp"
-            app:srcCompat="@drawable/ic_new" />
+            app:srcCompat="@drawable/ic_new"
+            android:id="@+id/new_chat"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
