--- a/app/src/main/res/layout/fragment_alert.xml
+++ b/app/src/main/res/layout/fragment_alert.xml
@@ -1,59 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/ten_dp"
     android:background="@color/white">
-
-    <include layout="@layout/layout_ad" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/heading"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/fifteen_dp"
-        android:paddingStart="@dimen/ten_dp"
-        android:paddingEnd="@dimen/ten_dp"
-        android:textColor="@color/black"
-        android:textSize="@dimen/twenty_one_sp"
-        android:textStyle="bold" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/body_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/ten_dp"
-        android:textSize="@dimen/fifteen_sp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="end"
-        android:padding="@dimen/ten_dp"
-        android:orientation="horizontal">
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/ten_dp"
-            android:textSize="@dimen/fifteen_sp"
-            android:textStyle="bold"
-            android:text="No"
-            android:id="@+id/negative"/>
+            android:orientation="vertical"
+            android:padding="@dimen/ten_dp">
 
-        <View
-            android:layout_width="@dimen/twenty_dp"
-            android:layout_height="@dimen/one_dp" />
+            <include layout="@layout/layout_ad" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/ten_dp"
-            android:textSize="@dimen/fifteen_sp"
-            android:textStyle="bold"
-            android:text="Yes"
-            android:id="@+id/positive"/>
-    </LinearLayout>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/heading"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/fifteen_dp"
+                android:paddingStart="@dimen/ten_dp"
+                android:paddingEnd="@dimen/ten_dp"
+                android:textColor="@color/black"
+                android:textSize="@dimen/twenty_one_sp"
+                android:textStyle="bold" />
 
-</LinearLayout>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/body_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/ten_dp"
+                android:textSize="@dimen/fifteen_sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:padding="@dimen/ten_dp"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/ten_dp"
+                    android:textSize="@dimen/fifteen_sp"
+                    android:textStyle="bold"
+                    android:text="No"
+                    android:id="@+id/negative"/>
+
+                <View
+                    android:layout_width="@dimen/twenty_dp"
+                    android:layout_height="@dimen/one_dp" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/ten_dp"
+                    android:textSize="@dimen/fifteen_sp"
+                    android:textStyle="bold"
+                    android:text="Yes"
+                    android:id="@+id/positive"/>
+            </LinearLayout>
+
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
