--- a/app/src/main/res/drawable/bg_round_purple.xml
+++ b/app/src/main/res/drawable/bg_round_purple.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/purple" />
-    <corners android:radius="@dimen/fifty_dp" />
+    <corners android:radius="@dimen/twenty_dp" />
 </shape>
