--- a/app/src/main/res/drawable/bg_round_white.xml
+++ b/app/src/main/res/drawable/bg_round_white.xml
@@ -3,5 +3,5 @@
     <solid
         android:color="@color/white"/>
     <corners
-        android:radius="@dimen/fifty_dp"/>
+        android:radius="@dimen/twenty_dp"/>
 </shape>
