--- a/app/src/main/res/layout/layout_receiver.xml
+++ b/app/src/main/res/layout/layout_receiver.xml
@@ -1,20 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="@dimen/eighteen_sp"
     android:padding="@dimen/ten_dp">
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_round_purple"
-        android:padding="@dimen/ten_dp"
-        android:id="@+id/textview"
-        android:textColor="@color/white"
+        android:orientation="vertical"
         android:layout_alignParentEnd="true"
-        android:textSize="@dimen/eighteen_sp"
+        android:background="@drawable/bg_round_purple"
         android:layout_marginStart="@dimen/eighty_dp">
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/ten_dp"
+            android:layout_gravity="end"
+            android:id="@+id/textview"
+            android:textColor="@color/white"
+            android:textSize="@dimen/eighteen_sp" />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingEnd="@dimen/ten_dp"
+            android:paddingStart="@dimen/ten_dp"
+            android:paddingBottom="@dimen/ten_dp"
+            android:id="@+id/timeText"
+            android:layout_gravity="end"
+            android:textColor="@color/light_snow"
+            android:textSize="@dimen/ten_sp" />
+    </LinearLayout>
 
-    </androidx.appcompat.widget.AppCompatTextView>
+
 </RelativeLayout>
