--- a/app/src/main/res/layout/layout_sender.xml
+++ b/app/src/main/res/layout/layout_sender.xml
@@ -5,15 +5,29 @@
     android:textSize="@dimen/eighteen_sp"
     android:padding="@dimen/ten_dp">
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:background="@drawable/bg_round_white"
-        android:padding="@dimen/ten_dp"
-        android:id="@+id/textview"
-        android:textColor="@color/black"
-        android:textSize="@dimen/eighteen_sp"
         android:layout_marginEnd="@dimen/eighty_dp">
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/ten_dp"
+            android:id="@+id/textview"
+            android:textColor="@color/black"
+            android:textSize="@dimen/eighteen_sp" />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="@dimen/ten_dp"
+            android:paddingEnd="@dimen/ten_dp"
+            android:paddingBottom="@dimen/ten_dp"
+            android:id="@+id/timeText"
+            android:layout_gravity="end"
+            android:textColor="@color/black"
+            android:textSize="@dimen/ten_sp" />
+    </LinearLayout>
 
-    </androidx.appcompat.widget.AppCompatTextView>
 </RelativeLayout>
